--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,11 @@
 [phases.setup]
-nixPkgs = ["php84", "php84Extensions.pdo", "php84Extensions.pdo_mysql", "php84Extensions.mbstring", "php84Extensions.xml", "php84Extensions.curl", "php84Extensions.zip", "php84Extensions.gd"]
+nixPkgs = ["php82", "php82Extensions.pdo", "php82Extensions.pdo_mysql", "php82Extensions.mysqlnd", "php82Extensions.mbstring", "php82Extensions.xml", "php82Extensions.curl", "php82Extensions.zip", "php82Extensions.gd", "php82Extensions.intl"]
 
 [phases.build]
 cmds = [
     "composer install --optimize-autoloader --no-dev",
     "npm ci",
+    "php artisan wayfinder:generate",
     "npm run build",
     "php artisan config:cache",
     "php artisan route:cache",
