--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -13,4 +13,4 @@ cmds = [
 ]
 
 [start]
-cmd = "php artisan migrate:fresh --force --seed && php artisan serve --host=0.0.0.0 --port=$PORT"
+cmd = "php artisan db:wipe --force && php artisan migrate --force --seed && php artisan serve --host=0.0.0.0 --port=$PORT"
