--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "dev": "vite",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
-        "lint": "eslint . --fix"
+        "lint": "eslint . --fix",
+        "build:android": "npx cap sync && cd android && .\\gradlew.bat assembleDebug",
+        "build:ios": "npx cap sync && npx cap open ios"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
@@ -32,6 +34,11 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@capacitor/android": "^8.0.2",
+        "@capacitor/app": "^8.0.0",
+        "@capacitor/cli": "^8.0.2",
+        "@capacitor/core": "^8.0.2",
+        "@capacitor/ios": "^8.0.2",
         "@coral-xyz/anchor": "^0.32.1",
         "@inertiajs/vue3": "^2.3.7",
         "@mdi/font": "^7.4.47",
@@ -39,6 +46,7 @@
         "@solana/web3.js": "^1.98.4",
         "@vueuse/core": "^12.8.2",
         "axios": "^1.13.4",
+        "bs58": "^6.0.0",
         "buffer": "^6.0.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -53,6 +61,7 @@
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
+        "tweetnacl": "^1.0.3",
         "vue": "^3.5.13",
         "vue-input-otp": "^0.3.2",
         "vuetify": "^3.11.8",
