--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
         "@coral-xyz/anchor": "^0.32.1",
         "@inertiajs/vue3": "^2.3.7",
         "@mdi/font": "^7.4.47",
+        "@noble/ed25519": "^3.0.0",
+        "@scure/bip39": "^2.0.1",
+        "@simplewebauthn/browser": "^13.2.2",
         "@solana/wallet-adapter-phantom": "^0.9.28",
         "@solana/web3.js": "^1.98.4",
         "@vueuse/core": "^12.8.2",
