--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "axios": "^1.13.4",
         "bs58": "^6.0.0",
         "buffer": "^6.0.3",
+        "capacitor-passkey-plugin": "^0.0.5",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "country-list-with-dial-code-and-flag": "^5.1.1",
