--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
         "@capacitor/browser": "^8.0.0",
         "@capacitor/cli": "^8.0.2",
         "@capacitor/core": "^8.0.2",
+        "@capacitor/filesystem": "^8.1.0",
         "@capacitor/ios": "^8.0.2",
+        "@capacitor/share": "^8.0.0",
         "@coral-xyz/anchor": "^0.32.1",
         "@inertiajs/vue3": "^2.3.7",
         "@mdi/font": "^7.4.47",
