--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,8 +1,22 @@
 apply plugin: 'com.android.application'
 
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localProperties.load(new FileInputStream(localPropertiesFile))
+}
+
 android {
     namespace = "com.ecothread.app"
     compileSdk = rootProject.ext.compileSdkVersion
+    signingConfigs {
+        release {
+            storeFile file(localProperties['KEYSTORE_FILE'] ?: 'src/main/res/ecothread.keystore')
+            storePassword localProperties['KEYSTORE_PASSWORD'] ?: ''
+            keyAlias localProperties['KEY_ALIAS'] ?: ''
+            keyPassword localProperties['KEY_PASSWORD'] ?: ''
+        }
+    }
     defaultConfig {
         applicationId "com.ecothread.app"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -18,6 +32,7 @@ android {
     }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
